--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <form>
     <h2>Input</h2>
-    <textarea rows="6" id="input"></textarea>
+    <textarea rows="6" id="input" value="$nihao"></textarea>
     <br>
     <button type="submit" id="calculate">Calculate</button>
     <button type="reset" id="reset">Reset</button>
